@@ -2081,14 +2081,20 @@ NOTE: These commands cannot be used with |:global| or |:vglobal|.
 
 							*:r!* *:read!*
 :[range]r[ead] [++opt] !{cmd}
-			Execute {cmd} and insert its standard output below
-			the cursor or the specified line.  A temporary file is
-			used to store the output of the command which is then
-			read into the buffer.  'shellredir' is used to save
-			the output of the command, which can be set to include
-			stderr or not.  {cmd} is executed like with ":!{cmd}",
-			any '!' is replaced with the previous command |:!|.
+			Execute shell {cmd} and insert its standard output
+			below the cursor or the specified line.  A temporary
+			file is used to store the output of the command which
+			is then	read into the buffer.  'shellredir' is used to
+			save the output of the command, which can be set to
+			include stderr or not.  {cmd} is executed like with
+			":!{cmd}", any '!' is replaced with the previous
+			command |:!|.
 			See |++opt| for the possible values of [++opt].
+
+							*:r:* *:read:*
+:[range]r[ead] :{cmd}
+			Execute Ex command {cmd} and insert its output below
+			the cursor or the specified line.
 
 These commands insert the contents of a file, or the output of a command,
 into the buffer.  They can be undone.  They cannot be repeated with the "."
